--- a/content/post/2017_01_05.md
+++ b/content/post/2017_01_05.md
@@ -8,15 +8,15 @@ image = "2016_12_reads_cover.jpg"
 In December I finished 11 books. That's CRAZY! I think that I associate the holiday season with curling up with a book.. and therefore take every opportunity to do so!
 
 The books:
-  The Graveyard Book Vol 1
-  The Graveyard Book Vol 2
-  Winter Stroll
-  Winter Storms
-  Eligible
-  Crooked Kingdom
-  The Woman in Cabin 10
-  All The Time in the World
-  A Man Called Ove
+  The Graveyard Book Vol 1,  
+  The Graveyard Book Vol 2,  
+  Winter Stroll,
+  Winter Storms,
+  Eligible,
+  Crooked Kingdom,
+  The Woman in Cabin 10,
+  All The Time in the World,
+  A Man Called Ove,
   Paper Princess
 
 Thoughts:
