--- a/content/post/2017_01_01.md
+++ b/content/post/2017_01_01.md
@@ -1,7 +1,7 @@
 +++
 date = "2017-01-01T16:11:58+05:30"
 draft = true
-title = "Holiday Travel""
+title = "Holiday Travel"
 image = "2017_01_cover.jpg"
 +++
 
