--- a/content/post/2017_01_17.md
+++ b/content/post/2017_01_17.md
@@ -5,7 +5,7 @@ title = "The movies, Lax and drinks!!"
 image = "2017_01_17_cover.jpg"
 +++
 
-I can't believe it's only been 9 days since my last post, and I can't believe it's only been 9 days! After a slow start to last week, the second half and weekend flew by! I think this post will be a long one...
+I can't believe it's only been 9 days since my last post, and I can't believe it's been 9 days! After a slow start to last week, the second half and weekend flew by! I think this post will be a long one...
 
 ![dog cuddles](/images/2017_01_17_indy.jpg)
 
