--- a/content/post/2017_01_17.md
+++ b/content/post/2017_01_17.md
@@ -24,6 +24,7 @@ Tuesday was GORGEOUS! I woke up and went to Yoga with one of my favorite teacher
 Rex and I sat in the sun on our patio. It's the perfect area- you're totally blocked from the wind, but have full sun access! I was hot sitting in my tank.
 
 ![sunny day](/images/2017_01_17_out1.jpg)
+
 ![sunny day](/images/2017_01_17_out2.jpg)
 
 Wednesday I woke up and decided to run some errands. We had some gift cards from Christmas- and that is my favorite way to shop! First I headed to Barnes and Noble- where I perused the shelves, tables, and displays before buying the two books I knew I was going to buy (but, as always, I was tempted). I also added a bunch of books to my Goodreads to-read section. Sighs. I bought the Handmaid's Tale, which I don't own and need to re-read, and Bridget Jones's Diary- which I have never read! Honest: I have high expectations there. We'll see when I get around to them. All my library holds came in at the same time, so prioritizing is an issue-
@@ -49,6 +50,7 @@ Before Zac got home on Thursday night I headed to Happy Hour at Avanti's with a 
 On Friday, I got the most unexpected and perfectly timed box ever. My dear friend, who I admire and am so lucky to know, sent me a holiday/care package. We've been talking a lot about life. Actually, we always do, and always will. I'm lucky to know her.
 
 ![gift](/images/2017_01_17_gift1.jpg)
+
 ![gift](/images/2017_01_17_gift2.jpg)
 
 Zac was back from LA, so in the morning we took Rex for a walk and grabbed coffee at ink.
@@ -61,14 +63,16 @@ Saturday we went for a long walk. It was nice outside, but not great. We walked 
 
 ![gift](/images/2017_01_17_train.jpg)
 
-That night, we had tickets to the Mammoth game! We use to love going to lax games in Buffalo, and were pretty excited to have team here in Denver. First we stopped for drinks and apps at a place called Public School 303. It was adorable! Decorated for school- they have flash cards on the walls, and menus that look like composition notebooks. Plus, the food and drinks (1/2 liter of wine on happy hour!) were fantastic. The wings reminded me a place my brother and I went as kids- they had the BEST wings, so that's a high compliment.
+That night, we had tickets to the Mammoth game! We use to love going to lax games in Buffalo, and were pretty excited to have a team here in Denver. First we stopped for drinks and apps at a place called Public School 303. It was adorable! Decorated for school- they have flash cards on the walls, and menus that look like composition notebooks. Plus, the food and drinks (1/2 liter of wine on happy hour!) were fantastic. The wings reminded me a place my brother and I went as kids- they had the BEST wings, so that's a high compliment.
 
 ![public school](/images/2017_01_17_ps303.jpg)
+
 ![public school](/images/2017_01_17_ps3032.jpg)
 
 Then we walked to the game and had so much fun! I can't wait to go again. It was a really close game too- we won.
 
 ![pepsi center](/images/2017_01_17_pc.jpg)
+
 ![mammoth](/images/2017_01_17_lax.jpg)
 
 Sunday was FOOTBALL DAY. The games were CRAZY! I am stoked that the Steelers won, and I can't wait to cheer them on this weekend (and every other day, GO STEELERS!)
