--- a/content/post/2017_01_19.md
+++ b/content/post/2017_01_19.md
@@ -2,7 +2,7 @@
 date = "2017-01-19T16:11:58+05:30"
 draft = true
 title = "Fight Gone Bad"
-image = "2017_01_19_cover.jpg"
+image = "2017_01_19_cover.png"
 +++
 
 It takes 21 days to make a habit, and I'm on day 19 of Tone It Up! That's 2 days from a habit? AND 2 days since "Ditch Day". This week I'm feeling great again. Last week I had some ups and downs-
