--- a/content/post/2017_01_19.md
+++ b/content/post/2017_01_19.md
@@ -14,7 +14,7 @@ Seriously love this list so much. After I finished my last audiobook, I couldn't
 
 ![tv](/images/2017_01_19_tv.jpg)
 
-What I learned last week is that I NEED TO EAT. I was so busy- which is ironic since I am unemployed- but I was jumping from one thing to the next and not prioritizing all 5 meals. So, I'd skip one, or two, in a day. I wouldn't feel hungry, until bed time. At that point, I knew I didn't want to eat anything. I'm trying REALLY hard not to eat anything after 7pm. So, I went to bed hungry. This was a HUGE MISTAKE. With the workouts, cardio and yoga I've been doing- I need food! Power! Energy! (Also, everyone needs food, and you should never go to bed hungry if you don't have to). I ended up crashing last week- and took some long naps. Then I started keeping up with meals. Even if I had to combine a M2 and M3, or a M4 and M5. I ate all the food in the plan. And you know what- I didn't go to bed hungry, and I have so much energy. So, EAT! It's part of taking care of yourself.
+What I learned last week is that I NEED TO EAT. I was so busy- I was jumping from one thing to the next and not prioritizing all 5 meals. So, I'd skip one, or two, in a day. I wouldn't feel hungry, until bed time. At that point, I knew I didn't want to eat anything. I'm trying REALLY hard not to eat anything after 7pm. So, I went to bed hungry. This was a HUGE MISTAKE. With the workouts, cardio and yoga I've been doing- I need food! Power! Energy! (Also, everyone needs food, and you should never go to bed hungry). I ended up crashing last week- and took some long naps. Then I started keeping up with meals. Even if I had to combine a M2 and M3, or a M4 and M5. I ate all the food in the plan. And you know what- I didn't go to bed hungry, and I have so much energy. So, EAT! It's part of taking care of yourself.
 
 ![food](/images/2017_01_19_food.jpg)
 
@@ -22,7 +22,7 @@ Eating aside, I also somehow hurt my leg this past weekend. Just a strained musc
 
 ![gym window](/images/2017_01_19_gym.jpg)
 
-As for workouts, I never purchased the workout videos from Tone It Up. Instead, I've been creating my own circuits. The ability to create these, well, I give all of the credit to Crossfit! Oh- a 22 minute video doing legs and shoulders? I'll throw together an EMOM. Or a METCON. Or, my absolute fav, Fight Gone Bad Style. Today there was an Arms and Abs video I don't have- so I threw together this FGBS workout: crunches, plank, sit ups, push ups, arm circles, break, dumbbell side bend, med ball chopper, farm carry, balance point crunches, break. The flow feels really productive- and you can do anything for 1 minute!
+As for workouts, I never purchased the workout videos from Tone It Up. Instead, I've been creating my own circuits. The ability to create these, well, I give all of the credit to Crossfit! Oh- a 22 minute video doing legs and shoulders? I'll throw together an EMOM. Or a METCON. Or, my absolute fav, Fight Gone Bad Style. Today there was an Arms and Abs video I don't have- so I threw together this FGB style workout: crunches, plank, sit ups, push ups, arm circles, break, dumbbell side bend, med ball chopper, farm carry, balance point crunches, break. The flow feels really productive- and you can do anything for 1 minute!
 
 ![workout](/images/2017_01_19_FGB.jpg)
 
