--- a/content/post/2017_02_01.md
+++ b/content/post/2017_02_01.md
@@ -39,7 +39,7 @@ ALSO BTW. Lyft/Uber rides are my favorite thing since moving to Denver. Really. 
 
 ![craft](/images/2017_02/2017_02_01/craft.jpg)
 
-Today I cleaned up and took a bunch of photos for my next blog post. I also caught up on The Vampire Diaries. Zac's sister, Mel, and I are the hugest TVD Fans. This week when NINA posted that she'd be coming back- we pretty much freaked out. I AM SO EXCITED.
+Yesterday, I cleaned up and took a bunch of photos for my next blog post. I also caught up on The Vampire Diaries. Zac's sister, Mel, and I are the hugest TVD Fans. This week when NINA posted that she'd be coming back- we pretty much freaked out. I AM SO EXCITED.
 
 ![tvd](/images/2017_02/2017_02_01/tvd.jpg)
 
