--- a/content/post/2017_02_01.md
+++ b/content/post/2017_02_01.md
@@ -5,7 +5,11 @@ title = "Fitness & Friends"
 image = "2017_02/2017_02_01/rex_cover.jpg"
 +++
 
-Saturday night we went out for a few drinks. We wanted to stay close, since Zac was still recovering. We headed to Zengo, but they had a huge Year of the Rooster celebration going on, and we werent' able to get in the door! So we went next door to McLoughlins. It was probably for the better. They were playing great 90s music and had the X Games on!
+Friday night we went out for Thai! As usual, Zac ordered the better dish. Mine was a little (way) too spicy for my likes, so I helped Z out a bit. It was good, but we'll still be on the hunt for Denvers best Thai!
+
+![dinner](/images/2017_02/2017_02_01/thai.jpg)
+
+Saturday night we went out for a few drinks. We wanted to stay close, since Zac was still recovering. We headed to Zengo, but they had a huge Year of the Rooster celebration going on, and we weren't able to get in the door! So we went next door to McLoughlins. It was probably for the better. They were playing great 90s music and had the X Games on!
 
 ![drinks](/images/2017_02/2017_02_01/drinks.jpg)
 
@@ -17,7 +21,7 @@ Sunday Zac was super tired from his late night so we pretty much just hung out a
 
 ![gym](/images/2017_02/2017_02_01/fitness.jpg)
 
-I made omelettes for breakfast with the veggiest I had left over from the week. We also tried the Ginger Sesame Chicken from TIU and it was fantastic.
+I made omelettes for breakfast with the veggies I had left over from the week. We also tried the Ginger Sesame Chicken from TIU and it was fantastic.
 
 ![food](/images/2017_02/2017_02_01/food.jpg)
 
