--- a/content/post/2017_02_05.md
+++ b/content/post/2017_02_05.md
@@ -72,7 +72,7 @@ Organizing all these spaces is incredibly important- and that is still a big wor
 
 ![--](/images/2017_02/2017_02_05/organize-01.JPG)
 
-There are two main ways I think about organization. 1. How often is the item used and 2. Where is the item used. If something is used everyday, it's readily available (like my Ninja blender that I use at least once a day. It's on the kitchen counter). If it's something that's used once a week to once a month it's stored but accessible (like my toaster. It's in a cabinet). I try to store these things relative to where they are needed. The shelf of the Besta unit that contains office supplies is the one right next to the desk. Our hats and gloves are in a drawer by the door. If you have to travel out of your way to put something away, it might not make it there. 
+There are two main ways I think about organization. 1. How often is the item used and 2. Where is the item used. If something is used everyday, it's readily available (like my Ninja blender that I use at least once a day. It's on the kitchen counter). If it's something that's used once a week to once a month it's stored but accessible (like my toaster. It's in a cabinet). I try to store these things relative to where they are needed. The shelf of the Besta unit that contains office supplies is the one right next to the desk. Our hats and gloves are in a drawer by the door. If you have to travel out of your way to put something away, it might not make it there.
 
 I also purchased two gift boxes to organize cords. One near our computer area, and one under the router on the foyer table. These are fantastic. They were cheap, but are really sturdy.
 
@@ -81,6 +81,10 @@ I also purchased two gift boxes to organize cords. One near our computer area, a
 ![--](/images/2017_02/2017_02_05/router.JPG)
 
 So, that is how we make it work. It would be nice to have an extra room as an office- and as a place for guests to sleep. We'll be hosting our firsts guests this month! Time will tell us how the pull out couch, and lack of dining table affects the visit. We have two good things going for us: 1. the complex we live in is really nice, and there are other places we can go to sit/eat/whatever 2. we live in Denver, so there's really no reason to ever be cooped up!
+
+![--](/images/2017_02/2017_02_05/smell.JPG)
+
+Lastly, I leave you with two tips for first floor living: 1. white noise maker 2. window film. The noise maker is wonderful because we have a very protective dog. He likes to freak out if he hears anyone walking by, so we have it on near the window while we sleep. The window film is awesome for privacy. We bought it really cheap on Amazon, cut it to fit the bottom of our window. Now we can slide the blinds up and get lots of natural light without being seen by anyone walking by.
 
 ![--](/images/2017_02/2017_02_05/livelong.JPG)
 
