--- a/content/post/2017_02_17.md
+++ b/content/post/2017_02_17.md
@@ -62,6 +62,8 @@ Friday- the final day of module one, week one! In the morning we had a guest spe
 
 ![wine](/images/2017_02/2017_02_17/wine.jpg)
 
+![swag](/images/2017_02/2017_02_17/swag.jpg)
+
 All week I packed my bag with Larabars as M4. It was the first time I tried them, and I absolutely LOVE cookie dough. The other flavors are really good too! They'll probably become a regular thing for me..
 
 ![Larabar](/images/2017_02/2017_02_17/larabar.jpg)
