--- a/content/post/2017_02_18.md
+++ b/content/post/2017_02_18.md
@@ -32,6 +32,8 @@ Wednesday my new bag came! I ordered an everyday tote- it is awesome! It has all
 
 After the CodePen Meetup, I headed to the gym at Galvanize. It was totally empty, and it was nice to change up the scenery.
 
+![Gym](/images/2017_02/2017_02_18/ggym.jpg)
+
 Thursday night Zac got home from Portland (and will be home for three weeks at least!!). I immediately had him run through a Git/Github exercise to explain some concepts for me. He's a sweet guy..
 
 ![git hub](/images/2017_02/2017_02_18/zacgit.jpg)
