--- a/content/post/2017_02_25.md
+++ b/content/post/2017_02_25.md
@@ -17,7 +17,7 @@ Luckily, Steph brought supplies to restock our Wegmans necessities! *the best!*
 
 We were so excited to have guests, and there were so many places we wanted to take them!
 
-Saturday evening we headed over to Galvanize, so I could show all three around my new school. Zac and Geoff squeezed in a game of ping pong, met an instructor and one of my cohort peers who was getting some work in.
+Saturday evening we headed over to Galvanize, so I could show all three around my new school. We met an instructor and one of my cohort peers who was getting some work in. Zac and Geoff also squeezed in a game of ping pong.
 
 ![Galvanize](/images/2017_02/2017_02_25/gschool.png)
 
@@ -29,7 +29,7 @@ Sunday we went to Eldora for a day of skiing/snowboarding. It was a pretty nice 
 
 ![skiing](/images/2017_02/2017_02_25/eldora.png)
 
-Sunday night we headed out. First we stopped at Avanti for drinks and food. Then we went all the way to Larimer where we got a drink. We stopped by Rocket Fizz for some fun/candy and then headed home.
+Sunday night we headed out. First we stopped at Avanti for drinks and food. Then we went all the way to Larimer where we got a drink and took in the gorgeous view that is Larimer at nighttime. On the way home, we stopped by Rocket Fizz because its fun to browse candies that were around during our childhood.
 
 ![avanti and larimer](/images/2017_02/2017_02_25/avanti_lar.png)
 
