Update theme to future imperfect

--- a/content/post/2017_01_17.md
+++ b/content/post/2017_01_17.md
@@ -2,7 +2,11 @@
 date = "2017-01-17T17:00:00+09:00"
 draft = true
 title = "The movies, Lax and drinks!!"
-image = "2017_01/2017_01_17/2017_01_17_cover.jpg"
+description = "Week in review"
+categories = ["Lifestyle", "Lacrosse", "Shopping", "Denver"]
+featured = "2017_01/2017_01_17/2017_01_17_cover.jpg"
+featuredpath = "/images"
+type = "post"
 +++
 
 I can't believe it's only been 9 days since my last post, and I can't believe it's been 9 days! After a slow start to last week, the second half and weekend flew by! I think this post will be a long one...
