--- a/content/post/2017_02_08.md
+++ b/content/post/2017_02_08.md
@@ -2,7 +2,11 @@
 date = "2017-02-08T17:00:00+09:00"
 draft = true
 title = "A busy relaxing week"
-image = "2017_02/2017_02_08/sunsnow.jpg"
+description = "Week in Review"
+categories = ["Lifestyle", "Fitness", "Hikes", "Home"]
+featured = "2017_02/2017_02_08/sunsnow.jpg"
+featuredpath = "/images"
+type = "post"
 +++
 
 It's been so gorgeous here lately, that it's hard to believe that a week ago everything was covered in ice! We had a nice day, and right as the sun was setting, starting getting some drizzle. Well, it all turned to ice and our walk that night and the next morning was treacherous.
