Change category tags to lowercase for compatability

--- a/content/post/2017_01_01.md
+++ b/content/post/2017_01_01.md
@@ -1,5 +1,5 @@
 +++
-categories = ["Hugo"]
+categories = ["first post", "holidays"]
 date = "2017-01-01"
 description = "traveling home from NY"
 draft = true
