--- a/content/post/2017_01_10.md
+++ b/content/post/2017_01_10.md
@@ -3,7 +3,7 @@ date = "2017-01-10"
 draft = true
 title = "Tone it Up!"
 description = "Week in review"
-categories = ["Lifestyle", "Fitness", "Kindness Yoga"]
+categories = ["fitness", "kindness yoga"]
 featured = "2017_01/2017_01_10/2017_01_10_yoga.jpg"
 featuredpath = "/images"
 type = "post"
