--- a/content/post/2017_01_17.md
+++ b/content/post/2017_01_17.md
@@ -3,7 +3,7 @@ date = "2017-01-17T17:00:00+09:00"
 draft = true
 title = "The movies, Lax and drinks!!"
 description = "Week in review"
-categories = ["Lifestyle", "Lacrosse", "Shopping", "Denver"]
+categories = ["lacrosse", "shopping", "denver"]
 featured = "2017_01/2017_01_17/2017_01_17_cover.jpg"
 featuredpath = "/images"
 type = "post"
