--- a/content/post/2017_01_19.md
+++ b/content/post/2017_01_19.md
@@ -3,7 +3,7 @@ date = "2017-01-19"
 draft = true
 title = "Fight Gone Bad"
 description = "Making gym circuts on the fly"
-categories = ["Lifestyle", "Fitness", "Food"]
+categories = ["fitness", "food"]
 featured = "2017_01/2017_01_19/2017_01_19_cover.png"
 featuredpath = "/images"
 type = "post"
