--- a/content/post/2017_01_27.md
+++ b/content/post/2017_01_27.md
@@ -3,7 +3,7 @@ date = "2017-01-27"
 draft = true
 title = "Sick & sick."
 description = "The only one not sick, was me."
-categories = ["Lifestyle", "Home", "Fitness"]
+categories = ["coffee", "fitness"]
 featured = "2017_01/2017_01_27/siczac.jpg"
 featuredpath = "/images"
 type = "post"
