--- a/content/post/2017_02_18.md
+++ b/content/post/2017_02_18.md
@@ -3,7 +3,7 @@ date = "2017-02-18"
 draft = true
 title = "Life Balance"
 description = "The life to my work life balance this week."
-categories = ["Fitness", "Lifestyle"]
+categories = ["fitness", "home"]
 featured = "2017_02/2017_02_18/weather.jpg"
 featuredpath = "/images"
 type = "post"
