--- a/content/post/2017_01_26.md
+++ b/content/post/2017_01_26.md
@@ -3,7 +3,7 @@ date = "2017-01-26"
 draft = true
 title = "Code Catchup"
 description = "..is that a mac?"
-categories = ["Lifestyle", "Web Dev", "Galvanize"]
+categories = ["web dev", "galvanize"]
 featured = "2017_01/2017_01_26/rollingmacs.jpg"
 featuredpath = "/images"
 type = "post"
