--- a/content/post/2017_02_01.md
+++ b/content/post/2017_02_01.md
@@ -3,7 +3,7 @@ date = "2017-02-01"
 draft = true
 title = "Fitness & Friends"
 description = "Week in review"
-categories = ["Lifestyle", "Fitness", "Friends", "Crafts"]
+categories = ["fitness", "friends", "crafts"]
 featured = "2017_02/2017_02_01/rex_cover.jpg"
 featuredpath = "/images"
 type = "post"
