--- a/content/post/2017_02_05.md
+++ b/content/post/2017_02_05.md
@@ -3,7 +3,7 @@ date = "2017-02-05"
 draft = true
 title = "659 Square Feet"
 description = "How we make living easy in under 700sqft"
-categories = ["Lifestyle", "Home", "Organization"]
+categories = ["home", "organization"]
 featured = "2017_02/2017_02_05/livelong.JPG"
 featuredpath = "/images"
 type = "post"
