--- a/content/post/2017_02_08.md
+++ b/content/post/2017_02_08.md
@@ -3,7 +3,7 @@ date = "2017-02-08T17:00:00+09:00"
 draft = true
 title = "A busy relaxing week"
 description = "Week in Review"
-categories = ["Lifestyle", "Fitness", "Hikes", "Home"]
+categories = ["fitness", "hikes", "home"]
 featured = "2017_02/2017_02_08/sunsnow.jpg"
 featuredpath = "/images"
 type = "post"
