--- a/content/post/2017_02_25.md
+++ b/content/post/2017_02_25.md
@@ -1,5 +1,5 @@
 +++
-categories = ["Hugo", "Denver", "Family"]
+categories = ["denver", "family"]
 date = "2017-02-25"
 description = "Steph & Geoff in Denver"
 draft = true
