--- a/content/post/2017_01_08.md
+++ b/content/post/2017_01_08.md
@@ -3,7 +3,7 @@ date = "2017-01-08"
 draft = true
 title = "Starting off 2017!"
 description = "Week in review"
-categories = ["web dev", "denver", "kindness yoga", "fitness"]
+categories = ["webdev", "denver", "yoga", "fitness"]
 featured = "2017_01/2017_01_08/2017_01_08_cover.jpg"
 featuredpath = "/images"
 type = "post"
