Add screen shot

--- a/content/post/2017_03_18.md
+++ b/content/post/2017_03_18.md
@@ -37,6 +37,8 @@ The requirements included: valid HTML, CSS, JavaScript and CSS Framework. Connec
 
 So, it took me all week. I used two API's (for weather and location) and by Wednesday night, I had a MVP (minimal viable product). Thursday I cleaned it up- and Friday, presented! Being honest, it could use some work and in the future, I'd like to do things differently (for instance, NOT use a CSS framework- but design the site myself).
 
+![Screen Shot](/images/2017_03/2017_03_18/api.png)
+
 Top things I learned?: 1. Local storage! Whoop. 2. When generating ideas- consider how much of the outcome relies on your creating content. The main product of the web app I created was written rather than pulled. I could spend hours and hours updating that content to make it better; and the product is that content! In the future, I will highly consider that.
 
 ![wireframe](/images/2017_03/2017_03_18/f.wireframe.jpg)
