--- a/content/post/2017_03_25.md
+++ b/content/post/2017_03_25.md
@@ -98,7 +98,6 @@ We have the Frasier Fir all purpose cleaner, and I wipe down the counters once i
 
 I love our scent. When we went away for the holidays this year and came back, it smelled so good. I might change it up in a couple months. Or, maybe, this one could be a keeper.
 
-
-
-
 **By the way, if I only ever get candles as gifts from this post on in my life, that’s excellent.**
+
+![pinterest](/images/2017_03/2017_03_25/pinterest.jpg)
