--- a/content/blog/2017_05_07.md
+++ b/content/blog/2017_05_07.md
@@ -21,7 +21,7 @@ It feels so great to be on break week. School just builds and builds until proje
 
 
 
-Monday- cheryl, roof, tiu dinner
+Monday I spent some time outside. Rex and Leo went on an outing. In the afternoon, I wasn't ready to let go of the sun yet- so I sat up on the roof for a little while.
 
 ![??](http://assets.mihshhehl.com/2017_05_07-m-gym.jpg)
 
@@ -35,45 +35,49 @@ Monday- cheryl, roof, tiu dinner
 
 ![??](http://assets.mihshhehl.com/2017_05_07-m-walk2.jpg)
 
-
-tuesday- dentist, ink, happy hour, foundations
+Tuesday, I had a dentist appointment. After I headed to Ink to work for a little while. Tuesday night was happy hour to celebrate the last week of JS Foundations!
 
 ![??](http://assets.mihshhehl.com/2017_05_07-t-found.jpg)
 
 ![??](http://assets.mihshhehl.com/2017_05_07-t-ink.jpg)
 
-wednesday-
+Wednesday was rainy. Here is a cute Rex picture:
 
 ![Rex  in his Rain Jacket](http://assets.mihshhehl.com/2017_05_07-w-rain.jpg)
 
-thursday- ikea, cherry creek, z
+Thursday I made a quick trip to Ikea to grab some decorations for Stephs bridal shower!
+
 ![??](http://assets.mihshhehl.com/2017_05_07-r-commute.jpg)
 
 ![??](http://assets.mihshhehl.com/2017_05_07-r-ditry.jpg)
 
 ![??](http://assets.mihshhehl.com/2017_05_07-r-zac.jpg)
 
-friday- bound plans, decor, honey tulepo,
+Friday my BOUND TIU books came in! I'm super excited. I should have done this earlier, but I'll get them bound from now on!
 
 ![??](http://assets.mihshhehl.com/2017_05_07-f-bound.jpg)
+
+I sent out the decor for the shower. I'm bummed I'll miss it, but I know it will be wonderful.
 
 ![??](http://assets.mihshhehl.com/2017_05_07-f-decor.jpg)
 
 ![??](http://assets.mihshhehl.com/2017_05_07-f-decor2.jpg)
 
+I hit the gym mid-day so I wouldn't feel as guilty about grabbing dinner with Z.
+
 ![??](http://assets.mihshhehl.com/2017_05_07-f-gym.jpg)
+
+We decided to try Tulepo Honey. It just opened by Union. Great drinks!
 
 ![??](http://assets.mihshhehl.com/2017_05_07-f-honey.jpg)
 
 ![??](http://assets.mihshhehl.com/2017_05_07-f-honey2.jpg)
 
-saturday - yoga, empinada, cojo
+Saturday morning I headed to Summer Soul Yoga with the girls. IT WAS AMAZING. I loved it SO MUCH and I can't wait to go again. The yoga was great- it's nice to be stronger. And the food. THE. FOOD.
 
-![??](http://assets.mihshhehl.com/2017_05_07-s-cojo.jpg)
 
-![??](http://assets.mihshhehl.com/2017_05_07-s-hp.jpg)
 
-![??](http://assets.mihshhehl.com/2017_05_07-s-maria.jpg)
+![??](http://assets.mihshhehl.com/2017_05_07-springsoul.png)
 
 ![??](http://assets.mihshhehl.com/2017_05_07-s-yoga1.jpg)
 
@@ -81,9 +85,18 @@ saturday - yoga, empinada, cojo
 
 ![??](http://assets.mihshhehl.com/2017_05_07-s-yogagroup.jpg)
 
-![??](http://assets.mihshhehl.com/2017_05_07-springsoul.png)
+After yoga, I worked on my project for awhile, watched Harry Potter.
 
-sunday- ink, hike,
+![??](http://assets.mihshhehl.com/2017_05_07-s-hp.jpg)
+
+Then, we headed down towards Cojo's for a get together. We stopped for Empinadas first!
+
+![??](http://assets.mihshhehl.com/2017_05_07-s-maria.jpg)
+![??](http://assets.mihshhehl.com/2017_05_07-s-cojo.jpg)
+
+
+
+Sunday we grabbed coffee at Ink, and then went for a hike! Mt. Sanitas was GREAT.
 
 ![??](http://assets.mihshhehl.com/2017_05_07-u-amwalk.jpg)
 
