--- a/content/blog/2017_08_08.md
+++ b/content/blog/2017_08_08.md
@@ -52,7 +52,11 @@ That night I headed to Kindness for a restoration yoga class. It was amazing to 
 
 Thursday I pretty much just spent the day at the pool. I also got my new calligraphy book in the mail, so I spent some time working with that.
 
-Friday, Kerry headed down after work. We were doing yoga in the morning, and she forgot her mat- so it was a perfect opportunity for me to go grab a travel mat!
+Friday morning I took the car in for an oil change. It was OUR FIRST OIL CHANGE SINCE MOVING. We FINALLY hit our 3,000 miles. Which is crazy, because we also DROVE IT FROM NY.
+
+![??](http://assets.mihshhehl.com/2017-08-08-car.jpg)
+
+That night, Kerry headed down after work. We were doing yoga in the morning, and she forgot her mat- so it was a perfect opportunity for me to go grab a travel mat!
 
 ![??](http://assets.mihshhehl.com/2017-08-08-mat.jpg)
 
@@ -77,6 +81,8 @@ Saturday afternoon, we went to a housewarming party. It was so great to see some
 
 Sunday was all about self-care-sunday. It was rainy out- so we had a really great brunch. I love making omlettes with bacon and apple - its an awesome combination. We watched the Circle, and of course, GAME OF THRONES.
 
+
+![??](http://assets.mihshhehl.com/2017-08-08-brunch.jpg)
 ![??](http://assets.mihshhehl.com/2017-08-08-sunself.jpg)
 ![??](http://assets.mihshhehl.com/2017-08-08-popcorn.jpg)
 
