--- a/content/blog/2017_08_13.md
+++ b/content/blog/2017_08_13.md
@@ -33,7 +33,7 @@ It was a pretty short and sweet first week- because Thursday and Friday Galvaniz
 ![Develop Denver Conference](http://assets.mihshhehl.com/2017-08-14-devden4.jpg)
 ![Develop Denver Conference](http://assets.mihshhehl.com/2017-08-14-devden5.jpg)
 
-Saturday morning we headed off on a family hike to Flora Mountain. It was GORGEOUS. It was actually pretty hard with the elevation, but we made it without hesitation. I would definitely recommend this one.
+Saturday morning we headed off on a family hike to Mt. Flora. It was GORGEOUS. It was actually pretty hard with the elevation, but we made it without hesitation. I would definitely recommend this one.
 
 ![Mt. Flora Hike](http://assets.mihshhehl.com/2017-08-14-flora1.jpg)
 ![Mt. Flora Hike](http://assets.mihshhehl.com/2017-08-14-flora2.jpg)
