--- a/content/blog/2017_08_13.md
+++ b/content/blog/2017_08_13.md
@@ -25,6 +25,10 @@ Tuesday I was invited to lunch, and decided to go. I'm going to have to work on 
 
 The second day I had a meeting with my instructional coach. He led me through the instructors curriculum and it was a really great conversation. I'm going to learn so much in this role.
 
+I rode my bike a bunch this week- and it's really great. Cutting my commute from 10 minutes to 2 sounds like a joke- but it's not.
+
+![Develop Denver Conference](http://assets.mihshhehl.com/2017-08-14-bike.jpg)
+
 It was a pretty short and sweet first week- because Thursday and Friday Galvanized was essentially closed down for the local conference, Develop Denver. It was SO MUCH fun. I met up with a lot of 46-ers and people I know from the local tech community. The talks were great, and I can't wait to go again next year! (Hopefully I'll get involved with some planning too).
 
 ![Develop Denver Conference](http://assets.mihshhehl.com/2017-08-14-devden1.jpg)
@@ -32,6 +36,10 @@ It was a pretty short and sweet first week- because Thursday and Friday Galvaniz
 ![Develop Denver Conference](http://assets.mihshhehl.com/2017-08-14-devden3.jpg)
 ![Develop Denver Conference](http://assets.mihshhehl.com/2017-08-14-devden4.jpg)
 ![Develop Denver Conference](http://assets.mihshhehl.com/2017-08-14-devden5.jpg)
+
+It was hard to keep up with my gym time. I know I need to improve my schedule and get into a routine.
+
+![Getting drinks](http://assets.mihshhehl.com/2017-08-14-tiu.jpg)
 
 Saturday morning we headed off on a family hike to Mt. Flora. It was GORGEOUS. It was actually pretty hard with the elevation, but we made it without hesitation. I would definitely recommend this one.
 
@@ -44,6 +52,9 @@ Saturday morning we headed off on a family hike to Mt. Flora. It was GORGEOUS. I
 After hiking, we went up to the highlands for dinner. We stopped at Stones (we thought it was a wood-fired pizza place). They didn't really have anything on the menu that we were interested in- so we had a drink and went up to Lohi Steakbar. It was a great place. Loved the outdoor atmosphere. However, the best Denver steak award still goes to Guard and Grace.
 
 ![Getting drinks](http://assets.mihshhehl.com/2017-08-14-postflora.jpg)
+![Getting drinks](http://assets.mihshhehl.com/2017-08-14-stones.jpg)
+![Getting drinks](http://assets.mihshhehl.com/2017-08-14-lohi1.jpg)
+![Getting drinks](http://assets.mihshhehl.com/2017-08-14-lohi2.jpg)
 
 Sunday Zac had a tennis match. When we got to the courts, it started raining! However, literally a block away, it wasn't. So the match relocated to another club and it was a great day to sit outside and enjoy a match.
 
