--- a/content/blog/2017_08_21.md
+++ b/content/blog/2017_08_21.md
@@ -79,7 +79,9 @@ My new book came in, so I got to start RE-READING the best series ever. Cojo is 
 Then, we did something REALLLLY exciting. We bought the Barista Express. We've been talking about an espresso machine for years. Lately, we've been talking about it a lot more. After lots of research, Zac found the best option for us currently.. I'm SO excited to learn all the things, and drink amazing lattes all the time.
 
 ![First Standup Monday](http://assets.mihshhehl.com/2017-08-21-williams.jpg)
+![Getting drinks](http://assets.mihshhehl.com/2017-08-21-tesla.jpg)
 ![First Standup Monday](http://assets.mihshhehl.com/2017-08-21-espresso.jpg)
+![Getting drinks](http://assets.mihshhehl.com/2017-08-21-espresso2.jpg)
 
 We didn't get to try the machine Saturday because Kerry got free tickets to the Rapids game! The poooooor team. They lost 0-1, and they SCORED AGAINST THEMSELVES. It was still awesome. The weather COULD NOT have been better.
 
