Fix duplicate paragraph and title error

--- a/content/blog/2017_08_21.md
+++ b/content/blog/2017_08_21.md
@@ -42,7 +42,7 @@ Wednesday night I went to orientation for GDI Event Organizers. I am PSYCHED to 
 
 ![First Standup Monday](http://assets.mihshhehl.com/2017-08-21-gdi.jpg)
 
-I took home the leftover wine (I walk-) and watched some Seeker of Truth.
+I took home the leftover wine (I walk-) and watched some Legend of the Seeker.
 
 ![First Standup Monday](http://assets.mihshhehl.com/2017-08-21-gdipost.jpg)
 
@@ -91,8 +91,6 @@ We didn't get to try the machine Saturday because Kerry got free tickets to the 
 ![First Standup Monday](http://assets.mihshhehl.com/2017-08-21-rapids4.jpg)
 
 Sunday morning, we woke up super early and headed to Boulder to hike Royal Arch! It was rated hard- and that's fair. It was only 3 miles but it was really steep. We had a great time- and afterwards we stopped in Boulder to walk the mall and show Kerry around.
-
-Kerry got free tickets to the Rapids game! The poooooor team. They lost 0-1, and they SCORED AGAINST THEMSELVES. It was still awesome. The weather COULD NOT have been better.
 
 ![First Standup Monday](http://assets.mihshhehl.com/2017-08-21-arch1.jpg)
 ![First Standup Monday](http://assets.mihshhehl.com/2017-08-21-arch2.jpg)
