--- a/content/blog/2017_08_26.md
+++ b/content/blog/2017_08_26.md
@@ -45,10 +45,16 @@ HOW did we move all our stuff? Friday night we went to Target and bought two big
 
 By Saturday night, we had 90% of our things moved over. Sunday we finished up- and cleaned 161 before saying goodbye!
 
-![pool party](http://assets.mihshhehl.com/2017-08-26-move_01.jpg)
-![pool party](http://assets.mihshhehl.com/2017-08-26-move_15.png)
-![pool party](http://assets.mihshhehl.com/2017-08-26-move_16.jpg)
-![pool party](http://assets.mihshhehl.com/2017-08-26-move_17.jpg)
-![pool party](http://assets.mihshhehl.com/2017-08-26-move_18.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_01.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_15.png)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_16.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_17.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_18.jpg)
 
-SO. HAPPY.
+Sunday night, we settled in the for GOT finale. HOW CAN WE GO 18 MONTHS!!!!?
+
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_19.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_20.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_21.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_22.jpg)
+![MISC](http://assets.mihshhehl.com/2017-08-26-move_23.jpg)
